--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -91,12 +91,15 @@
     <ng-container>
         <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="game-frame in-game" [ngClass]="{ 'is-tablet': isTablet }">
             <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
-            <ng-container *ngIf="mobileScreen">
+            <ng-container *ngIf="mobileScreen && gameFornecedor !== 'pgsoft'">
                 <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
             </ng-container>
-            <ng-container *ngIf="!mobileScreen">
+            <ng-container *ngIf="!mobileScreen && gameFornecedor !== 'pgsoft'">
                 <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allowfullscreen></iframe>
             </ng-container>
+            <ng-container *ngIf="!mobileScreen">
+                <iframe *ngIf="htmlGameUrl != ''" #iframe [srcdoc]="htmlGameUrl" (load)="onIframeLoad(iframe)" allowfullscreen></iframe>
+            </ng-container>              
         </div>
 
         <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame" [ngClass]="{ 'is-tablet': isTablet }">
