--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -275,7 +275,7 @@
     padding: 30px 20px;
 }
 
-#legitimuz {
+#legitimuz, #docCheck {
     display: flex;
     flex-direction: column;
     gap: 16px;
