--- a/src/app/meu-perfil/alterar-senha.component.html
+++ b/src/app/meu-perfil/alterar-senha.component.html
@@ -123,9 +123,9 @@
                     </button>
                 </div>
                 </form>
-                <div *ngIf="faceMatchType == 'legitimuz'">
+                <div *ngIf="faceMatchType == 'legitimuz' && faceMatchEnabled">
                 <div #legitimuz id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && !verifiedIdentity">
+                    *ngIf="!faceMatchChangePasswordValidated && !verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -142,7 +142,7 @@
                     <div id="legitimuz-root"></div>
                 </div>
                 <div #legitimuzLiveness id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && verifiedIdentity">
+                    *ngIf="!faceMatchChangePasswordValidated && verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -159,8 +159,9 @@
                     <div id="legitimuz-root"></div>
                 </div>
                 </div>
-                <div *ngIf="faceMatchType == 'docCheck'">
-                    <div #docCheck id="legitimuz">
+                <div *ngIf="faceMatchType == 'docCheck' && faceMatchEnabled">
+                    <div #docCheck id="docCheck"
+                    *ngIf="!faceMatchChangePasswordValidated">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
                             ('saques.identityVerifyNeeded' | translate)}}
