--- a/src/app/shared/layout/modals/cliente-senha-modal/cliente-senha-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-senha-modal/cliente-senha-modal.component.html
@@ -66,9 +66,9 @@
                     </button>
                 </div>
             </form>
-            <div *ngIf="faceMatchType == 'legitimuz'">
+            <div *ngIf="faceMatchType == 'legitimuz' && faceMatchEnabled">
                 <div #legitimuz id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && !verifiedIdentity">
+                    *ngIf="faceMatchChangePassword && !faceMatchChangePasswordValidated && !verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -85,7 +85,7 @@
                     <div id="legitimuz-root"></div>
                 </div>
                 <div #legitimuzLiveness id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && verifiedIdentity">
+                    *ngIf="faceMatchChangePassword && !faceMatchChangePasswordValidated && verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -102,8 +102,9 @@
                     <div id="legitimuz-root"></div>
                 </div>
                 </div>
-                <div *ngIf="faceMatchType == 'docCheck'">
-                    <div #docCheck id="legitimuz">
+                <div *ngIf="faceMatchType == 'docCheck' && faceMatchEnabled">
+                    <div #docCheck id="docCheck"
+                         *ngIf="!faceMatchChangePasswordValidated">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
                             ('saques.identityVerifyNeeded' | translate)}}
