--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
@@ -78,6 +78,9 @@
             <p class="ganho" *ngIf="aposta.resultado || aposta.resultado == 'a confirmar'">
                 {{'geral.premio' | translate}}:<span>{{aposta.premio | currency}}</span>
             </p>
+            <p class="income-tax">
+                {{'bet.incomeTaxOnPrize' | translate}}:<span>{{aposta.incomeTaxOnPrize | currency}}</span>
+            </p>
             <p *ngIf="aposta.passador.percentualPremio > 0" class="cambista-paga">
                 Cambista paga:<span>{{cambistaPaga|currency}}</span>
             </p>
@@ -185,11 +188,11 @@
                                     </p>
                                 </ng-template>
                             </div>
-                        </div>                    
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>    
+        </div>
     </ng-container>
 </div>
 <div class="modal-footer">
