refactor: change the label of income tax in listining casino bets in mobile

--- a/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.html
@@ -78,7 +78,7 @@
                         <th *ngIf="!mobileScreen">{{'geral.horario' | translate}}</th>
                         <th>{{'geral.valor' | translate}}</th>
                         <th *ngIf="tabSelected === 'cassino'">{{'geral.premio' | translate}} </th>
-                        <th *ngIf="tabSelected === 'cassino'">{{'bet.incomeTaxOnPrize' | translate}} </th>
+                        <th *ngIf="tabSelected === 'cassino'">{{'geral.tax' | translate}} </th>
                         <th></th>
                     </tr>
                 </thead>
