--- a/src/app/cambistas/solicitacao-saque/solicitacao-saque.component.html
+++ b/src/app/cambistas/solicitacao-saque/solicitacao-saque.component.html
@@ -65,7 +65,7 @@
                     <span class="chave">#{{solicitacao.id}}</span>
                     <span><label>{{'geral.apostador' | translate}} : </label> {{solicitacao.cartao_aposta.apostador}}</span>
                     <span><label>Chave: </label> {{solicitacao.cartao_aposta_chave}}</span>
-                    <span><label>{{'geral.saldoAtual' | translate}}<: </label> {{solicitacao.cartao_aposta.saldo | currency}}</span>
+                    <span><label>{{'geral.saldoAtual' | translate}} : </label> {{solicitacao.cartao_aposta.saldo | currency}}</span>
                     <span><label>Data solicitação: </label> {{solicitacao.data | moment:'DD/MM/YYYY HH:mm'}}</span>
                     <span><label>Valor: </label> {{solicitacao.valor | currency}}</span>
                     <span class="buttons" *ngIf="solicitacao.aprovado && !solicitacao.pago">
