Adjust mobile view

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -291,7 +291,7 @@ iframe{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 10px;
+        /* padding: 10px; */
         background-color: #000;
         color: #fff;
         margin: 0;
