--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -585,9 +585,11 @@ iframe{
     }
 
     app-back-page {
-        padding: 0 35px 0 35px;
         display: flex;
-        margin-top: 16px;
+        width: 350px;
+        height: auto;
+        margin: 16px auto -16px auto;
+        position: relative;
         align-items: center;
     }
 }
@@ -902,7 +904,7 @@ iframe{
     }
 
     app-back-page {
-        padding: 0 50px 0 50px;
+        padding: 0 32px 0 32px;
         display: flex;
         margin-top: 16px;
         align-items: center;
