fix: Deposit details text by adding "Pix" to the instructions.

--- a/src/app/cambistas/deposito/pix/deposito-pix.component.html
+++ b/src/app/cambistas/deposito/pix/deposito-pix.component.html
@@ -32,7 +32,7 @@
                 <div id="details-wrapper">
                     <div class="details-container">
                         <div class="details-text">
-                            {{('deposito.depositTextWithoutBonusAndPromocode' | translate:{'paymentMethod': (paymentMethodSelected | formatPaymentMethod)})}}
+                            {{('deposito.depositTextWithoutBonusAndPromocode' | translate)}}
                         </div>
                         <div class="hide-desktop details-payment-method" *ngIf="availablePaymentMethods.length > 1">
                             <h3>{{'financeiro.paymentGateway' | translate}}</h3>
