refactor: remove inline style from cursor pointer and apply through the btn-sair class

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -722,7 +722,7 @@
                                     {{ 'geral.jogoResponsavel' | translate }}
                                 </a>
                             </div>
-                            <a (click)="logout()" style="cursor: pointer;" class="dropdown-btn btn-sair">
+                            <a (click)="logout()" class="dropdown-btn btn-sair">
                                 <i class="fa fa-sign-out mr-2"></i>
                                 <span class="dados">{{ 'geral.sair' | translate }}</span>
                             </a>
