--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -210,6 +210,7 @@ nav::-webkit-scrollbar {
 .btn-sair {
     margin: 40px 20px 20px;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .dropdown-menu {
