Fix: adjustments on gameview

--- a/src/app/shared/layout/back-page/back-page/back-page.component.css
+++ b/src/app/shared/layout/back-page/back-page/back-page.component.css
@@ -32,3 +32,9 @@
 .back-page__text {
     cursor: pointer;
 }
+
+@media only screen and (max-width: 350px) {
+    .card-small{
+        width: 300px;
+    }
+}
