--- a/src/app/shared/layout/exibir-bilhete/cassino/exibir-bilhete-cassino/exibir-bilhete-cassino.component.html
+++ b/src/app/shared/layout/exibir-bilhete/cassino/exibir-bilhete-cassino/exibir-bilhete-cassino.component.html
@@ -6,7 +6,7 @@
         <div id="cupom-info">
             <p>{{aposta.game}}</p>
             <p style="font-size: 16px">{{aposta.codigo}} <i *ngIf="!playButton" (click)="copyToClipboard(aposta.codigo)" style="cursor: pointer; margin-left: 0.25rem;" class="far fa-copy"></i></p>
-            <p>Apostado por {{aposta.apostador}}</p>
+            <p>Apostador: {{aposta.apostador}}</p>
             <p>Em {{aposta.horario | moment: 'DD/MM/YYYY [às] HH:mm'}}</p>
         </div>
     </div>
@@ -14,7 +14,7 @@
         <p>Valor: <span style="float: right;">{{aposta.valor | currency}}</span></p>
         <p>Prêmio: <span style="float: right;">{{aposta.premio | currency}}</span></p>
     </div>
-    <button class="btn btn-custom" id="play-button" [routerLink]="['/casino/' + aposta.fornecedor + '/' + aposta.gameID]" *ngIf="playButton">
+    <button class="btn btn-custom" id="play-button" [routerLink]="['/casino/' + aposta.fornecedor + '/' + aposta.gameID]">
         {{ 'geral.jogar'| translate }} {{aposta.game}}
     </button>
 </div>
