Display pgsoft gameview on mobile

--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -47,6 +47,12 @@
                     <ng-container *ngIf="!mobileScreen">
                         <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allow="fullscreen"></iframe>
                     </ng-container>
+                    <ng-container *ngIf="mobileScreen">
+                        <iframe *ngIf="htmlGameUrl != ''" #iframe [srcdoc]="htmlGameUrl" (load)="onIframeLoad(iframe)"></iframe>
+                    </ng-container>                     
+                    <ng-container *ngIf="mobileScreen">
+                        <iframe *ngIf="htmlGameUrl != ''" #iframe [srcdoc]="htmlGameUrl" (load)="onIframeLoad(iframe)" allow="fullscreen"></iframe>
+                    </ng-container> 
                 </div>
             </div>
 
