--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" *ngIf="fullRegistration">
                 <div class="col-md-12">
                     <div class="form-group mb-4">
                         <div class="input-md">
@@ -101,7 +101,7 @@
                                        class="text-left"></app-error-msg>
                     </div>
                 </div>
-            
+
                 <div class="col-12 col-md-6">
                     <div class="form-group mb-4">
                         <div class="input-md">
@@ -142,7 +142,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" *ngIf="fullRegistration">
                 <div class="col-12 col-md-6">
                     <div class="form-group input-md placeholder-active mb-4" [ngClass]="applyCssDivError('genero')">
                         <select class="form-control inverted-out" formControlName="genero">
@@ -178,7 +178,7 @@
                 </div>
             </div>
 
-            <div class="row my-5">
+            <div class="row my-5" *ngIf="fullRegistration">
                 <div class="col-md-9">
                     <div class="form-group mb-4">
                         <div class="input-md">
@@ -202,7 +202,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3" *ngIf="fullRegistration">
                     <div class="form-group mb-4">
                         <div class="input-md">
                             <input
@@ -226,7 +226,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6" *ngIf="fullRegistration">
                     <div class="form-group mb-4">
                         <div class="input-md">
                             <input
@@ -251,7 +251,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6" *ngIf="fullRegistration">
                     <div class="form-group mb-4">
                         <div class="input-md">
                             <input
@@ -274,7 +274,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6" *ngIf="fullRegistration">
                     <div class="form-group input-md placeholder-active">
                         <select
                             formControlName="estado"
@@ -292,7 +292,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6" *ngIf="fullRegistration">
                     <div class="form-group input-md placeholder-active">
                         <select
                             formControlName="cidade"
