fix: changing footer affiliate link to bet10.bet

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -80,7 +80,7 @@
             <a [routerLink]="['/informacoes/quem-somos']" *ngIf="hasQuemSomos">
                 {{'footer.quemSomos' | translate}}
             </a>
-            <a href="https://afiliados.{{sharedUrl}}" target="_blank" *ngIf="exibirLinkAfiliado">
+            <a href="https://afiliados{{sharedUrl}}" target="_blank" *ngIf="exibirLinkAfiliado">
                 {{'footer.afiliados' | translate}}
             </a>
             <a target="_blank" download="app.apk" [href]="appUrl" *ngIf="hasApk && !isAppMobile">
