feat: adjust. view icon

--- a/src/app/cambistas/solicitacao-saque/solicitacao-saque.component.html
+++ b/src/app/cambistas/solicitacao-saque/solicitacao-saque.component.html
@@ -109,7 +109,7 @@
                             <td>
                                 <button *ngIf="solicitacao.aprovado && !solicitacao.pago" type="button"
                                     class="btn btn-primary" (click)="setPagamento(solicitacao)">
-                                    <i class="fa fa-money"></i>
+                                    <i class="fa fa-check" style="color: white;"></i>
                                 </button>
                             </td>
                         </tr>
