fix: adjustment to affiliate URL

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -80,9 +80,16 @@
             <a [routerLink]="['/informacoes/quem-somos']" *ngIf="hasQuemSomos">
                 {{'footer.quemSomos' | translate}}
             </a>
-            <a href="https://afiliados{{sharedUrl}}" target="_blank" *ngIf="exibirLinkAfiliado">
-                {{'footer.afiliados' | translate}}
-            </a>
+            <ng-container *ngIf="this.slug != 'bet10.bet'; else elseUrlAfiliadoBet10"> 
+                <a href="https://afiliados.{{sharedUrl}}" target="_blank" *ngIf="exibirLinkAfiliado">
+                    {{'footer.afiliados' | translate}}
+                </a>
+            </ng-container>
+            <ng-template #elseUrlAfiliadoBet10>
+                <a href="https://afiliados{{sharedUrl}}" target="_blank" *ngIf="exibirLinkAfiliado">
+                    {{'footer.afiliados' | translate}}
+                </a>
+            </ng-template>
             <a target="_blank" download="app.apk" [href]="appUrl" *ngIf="hasApk && !isAppMobile">
                 {{'footer.downloadApp' | translate}}
             </a>
