--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -82,7 +82,7 @@
                 <input type="hidden" id="nomeCompleto" formControlName="nomeCompleto">
             </div>
             <div class="row">
-                <div class="col-12 col-md-6" [hidden]="autoPreenchimento || validarBeneficioProgramaSocial">
+                <div class="col-md-12" [hidden]="autoPreenchimento || validarBeneficioProgramaSocial">
                     <div class="form-group mb-4">
                         <div class="input-md">
                             <input
@@ -101,8 +101,9 @@
                                        class="text-left"></app-error-msg>
                     </div>
                 </div>
-
-                <div class="col-12 col-md-6">
+            </div>
+            <div class="row">
+                <div class="col-md-12">
                     <div class="form-group mb-4">
                         <div class="input-md">
                             <input
